# mmilter

./: Makefile.in  README  config.h.in  configure  configure.ac
src/: Makefile.am  Makefile.in  fdutil.c  milter.c  milter.h  spamd.c
